syntax = "proto3";
option java_package = "dev.notrobots.authenticator.proto";

message Authenticator {
  enum Algorithm {
    ALGORITHM_UNSPECIFIED = 0;
    ALGORITHM_SHA1 = 1;
    ALGORITHM_SHA256 = 2;
    ALGORITHM_SHA512 = 3;
    //    ALGORITHM_MD5 = 4;
  }

  enum OTPType {
    OTP_TYPE_UNSPECIFIED = 0;
    OTP_TYPE_HOTP = 2;
    OTP_TYPE_TOTP = 3;
  }

  message Account {
    string name = 1;
    bytes secret = 2;
    string issuer = 3;
    string label = 4;
    OTPType type = 5;
    int64 counter = 6;
    int32 digits = 7;
    int64 period = 8;
    Algorithm algorithm = 9;
    int64 order = 10;
    repeated string tags = 11;
  }

  message Tag {
    string name = 2;
  }

  message Backup {
    repeated Account accounts = 1;
    repeated Tag tags = 2;
  }
}

